--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ body {
 }
 
 .edu-img {
+    object-fit: cover;
     width: 30%;
     border-radius: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
